// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="page page-limited portfolio-overview"
>
  <div
    className="page-actions"
  >
    <Report
      component={
        Object {
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
  </div>
  <h1>
    portfolio.health_factors
  </h1>
  <div
    className="portfolio-boxes"
  >
    <MetricBox
      component="foo"
      measures={
        Object {
          "ncloc": "173",
          "reliability_rating": "1",
        }
      }
      metricKey="releasability"
    />
    <MetricBox
      component="foo"
      measures={
        Object {
          "ncloc": "173",
          "reliability_rating": "1",
        }
      }
      metricKey="reliability"
    />
    <MetricBox
      component="foo"
      measures={
        Object {
          "ncloc": "173",
          "reliability_rating": "1",
        }
      }
      metricKey="vulnerabilities"
    />
    <MetricBox
      component="foo"
      measures={
        Object {
          "ncloc": "173",
          "reliability_rating": "1",
        }
      }
      metricKey="security_hotspots"
    />
    <MetricBox
      component="foo"
      measures={
        Object {
          "ncloc": "173",
          "reliability_rating": "1",
        }
      }
      metricKey="maintainability"
    />
  </div>
  <h1>
    portfolio.breakdown
  </h1>
  <div
    className="portfolio-breakdown"
  >
    <div
      className="portfolio-breakdown-box"
    >
      <h2>
        portfolio.number_of_projects
      </h2>
      <div
        className="portfolio-breakdown-metric"
      >
        <Measure
          metricKey="projects"
          metricType="SHORT_INT"
          value="0"
        />
      </div>
      <div
        className="portfolio-breakdown-box-link"
      >
        <div>
          <MeasuresButtonLink
            component="foo"
            metric="projects"
          />
        </div>
      </div>
    </div>
    <div
      className="portfolio-breakdown-box"
    >
      <h2>
        portfolio.number_of_lines
      </h2>
      <div
        className="portfolio-breakdown-metric"
      >
        <Measure
          metricKey="ncloc"
          metricType="SHORT_INT"
          value="173"
        />
      </div>
      <div
        className="portfolio-breakdown-box-link"
      >
        <div>
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/component_measures",
                "query": Object {
                  "id": "foo",
                  "metric": "ncloc",
                },
              }
            }
          >
            <span>
              portfolio.language_breakdown_link
            </span>
          </Link>
        </div>
      </div>
    </div>
  </div>
  <WorstProjects
    component="foo"
    subComponents={Array []}
    total={0}
  />
</div>
`;

exports[`renders when portfolio is empty 1`] = `
<div
  className="empty-search"
>
  <h3>
    portfolio.empty
  </h3>
</div>
`;

exports[`renders when portfolio is not computed 1`] = `
<div
  className="empty-search"
>
  <h3>
    portfolio.not_computed
  </h3>
</div>
`;
